[feature] implement chats and messages search
